--- a/config.yaml
+++ b/config.yaml
@@ -24,6 +24,8 @@ markup:
 params:
   # Background Image
   background: "images/sea.jpg"
+  newsletter:
+    enable: false
   
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
@@ -32,8 +34,9 @@ params:
     inverted: images/inverted-logo.png
     favicon: images/logo1.png
   
+  # Improve This Page
   # GitHub repo of your site 
-  gitRepo: https://github.com/quynh-vo-le/quynh-vo-le.github.io.git
+  gitRepo: https://github.com/quynh-vo-le/quynh-vo-le.github.io
 
 
   # specify whether you want to write some blog posts or not
