--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -45,3 +45,26 @@ socialLinks:
 
 # your resume. this file path should be relative to you "static" directory
 resume: "files/resume_quynhvo.pdf"
+
+# Your soft skills
+badges:
+- type: soft-skill-indicator
+  name: Leadership
+  percentage: 85
+  color: blue
+
+- type: soft-skill-indicator
+  name: Team Work
+  percentage: 85
+  color: yellow
+
+- type: soft-skill-indicator
+  name: Hard Working
+  percentage: 90
+  color: orange
+  
+- type: soft-skill-indicator
+  name: Self-learning
+  percentage: 90
+  color: green
+  
