--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -44,7 +44,7 @@ socialLinks:
   url: "https://www.youtube.com/channel/UC1_03eKw6kxSa5OjE4qW_-Q"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/resume_quynhvo.pdf"
+resume: "files/Resume_Quynh Vo.pdf"
 
 # Your soft skills
 badges:
