--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -89,7 +89,7 @@ degrees:
       # outOf: 
 - name: B.Sc. in Fisheries Resource Management
   icon: fa-graduation-cap
-  timeframe: 2012-2016
+  timeframe: Sep 2012 - Mar 2016
   institution:
     name: Can Tho University - Vietnam
     url: "https://en.ctu.edu.vn/"
