--- a/data/author.yaml
+++ b/data/author.yaml
@@ -1,8 +1,7 @@
 # some information about you
 name: "Quynh Vo"
 nickname: "Quynh"
-image: "images/logo1.png"
-
+image: "images/quynhs.jpg"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
 
