--- a/config.yaml
+++ b/config.yaml
@@ -30,7 +30,7 @@ params:
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: images/main-logo.png
+    main: images/quynhs-main-logo.png
     inverted: images/inverted-logo.png
     favicon: images/logo1.png
   
