commit on 1 June 2022

--- a/data/author.yaml
+++ b/data/author.yaml
@@ -14,5 +14,5 @@ contactInfo:
 summary:
 - I am an aquaculturist enthusiast
 - I work as a freelancer
-- I love to work with some fun projects in aquaculture and fisheries
+- I love to work with some interesting projects in aquaculture and fisheries
 
