--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,9 @@ languages:
   en:
     languageName: English
     weight: 1
+  vn: 
+    languageName: Tiếng Việt
+    weight: 2
 
 # Control TOC depth
 markup:
@@ -25,7 +28,7 @@ params:
   # Background Image
   background: "images/sea.jpg"
   newsletter:
-    enable: false
+    enable: true
   
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
@@ -78,9 +81,16 @@ params:
 
     # Enable comment feature. There, should be only one of them.
     comment:
-      enable: false
+      enable: true
       disqus:
         shortName: Quynh's-Blog
+        
+     # Enable Analytics
+    analytics:
+      enabled: true
+      # Google Analytics
+      google:
+        id: khanhquynhvole@gmail.com
         
 
       
