commit on 1 June 2022 - Second

--- a/data/author.yaml
+++ b/data/author.yaml
@@ -8,11 +8,11 @@ greeting: "Hi, I am"
 # give your contact information. they will be used in the footer
 contactInfo:
   email: "khanhquynhvole@gmail.com"
-  phone: "+33(0)602377985"
+  phone: "+84(0)911756259"
 
 # a summary of what you do
 summary:
 - I am an aquaculturist enthusiast
 - I work as a freelancer
-- I love to work with some interesting projects in aquaculture and fisheries
+- I love to work with interesting projects in aquaculture and fisheries
 
