--- a/config.yaml
+++ b/config.yaml
@@ -26,16 +26,16 @@ markup:
 # Site parameters
 params:
   # Background Image
-  background: "images/sea.jpg"
+  background: "images/site/sea.jpg"
   newsletter:
     enable: true
   
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: images/quynhs-main-logo.png
-    inverted: images/inverted-logo.png
-    favicon: images/logo1.png
+    main: /images/site/quynhs-main-logo.png
+    inverted: /images/inverted-logo.png
+    favicon: /images/site/logo1.png
   
   # Improve This Page
   # GitHub repo of your site 
