--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -17,7 +17,7 @@ achievements:
   # image: images/sections/achievements/sport.jpg
   # summary: Champion in cycling inter-city cycling championship 2020.
 - title: Graduation
-  image: images/aces.png
+  image: images/sections/achievements/aces.png
   summary: Received MSc. in Aquaculture, Environment and Society PLUS (EMJMD ACES+) from the University of  the University Highlands and Islands, the University of Crete and the University of Nantes.
 - title: Graduation
   image: images/sections/achievements/ctu.png
