--- a/data/author.yaml
+++ b/data/author.yaml
@@ -8,11 +8,11 @@ greeting: "Hi, I am"
 # give your contact information. they will be used in the footer
 contactInfo:
   email: "khanhquynhvole@gmail.com"
-  phone: "+84(0)911756259"
+  phone: "+61(0) 416 530 679"
 
 # a summary of what you do
 summary:
 - I am an aquaculturist enthusiast
-- I work as a freelancer
-- I love to work with interesting projects in aquaculture and fisheries
+- I am working on my PhD project to develop a computer vision approach to monitor the welfare of farmed salmon in offshore aquaculture. 
+- I work with the industry partners in Tasmania to address their concerns about the welfare of farmed salmon offshore.
 
