--- a/data/author.yaml
+++ b/data/author.yaml
@@ -12,7 +12,7 @@ contactInfo:
 
 # a summary of what you do
 summary:
-- I am an aquaculturist enthusiast
+- I am an aquaculture enthusiast
 - I am working on my PhD project to develop a computer vision approach to monitor the welfare of farmed salmon in offshore aquaculture. 
 - I work with the industry partners in Tasmania to address their concerns about the welfare of farmed salmon offshore.
 
