--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -7,7 +7,7 @@ section:
   template: sections/about.html # allows you to point to a specific template.
   
 # your designation
-designation: PhD Candidate - Griffith University 
+designation: PhD Candidate at 
 # your company information
 company:
   name: Griffith University.
